assets/scss/custom.scss
a.navbar-brand {
  text-transform: uppercase;
}
.navbar-nav a.nav-link {
  text-transform: uppercase;
}
.page-footer {
  background-color: #2c3e50;
}
.page-footer .site-footer {
  color: #fff;
}
.page-footer .site-footer a {
  color: #1abc9c;
}

// Callouts
div.alert.alert-warning {
  border-color: #cd0930;

  code {
    background-color: #fff5f7;
  }

  div:first-child::before {
    color: #e54867;
  }
}

div.alert.alert-note {
  border-color: #12537e;
}

div.alert {
  div:first-child::before {
    color: #55779a;
  }
}

// MailChimp

#mc_embed_signup form {
  text-align: center;
  padding: 10px 0 10px 0;
  border: 1px solid #e3e3e3;
  background-color: #f8f8f8;
  border-radius: 6px;
}
#mc_embed_signup_scroll {
  padding: 40px;
}
#mc_embed_signup input.email {
  font-size: 15px;
  font-weight: 400;
  border: 1px solid #e3e3e3;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  color: #000;
  background-color: #fff;
  box-sizing: border-box;
  padding: 12px;
  display: inline-block;
  margin: 0;
  vertical-align: top;
  width: 100%;
}
#mc_embed_signup input.email:focus {
  outline: none;
}
#mc_embed_signup .button {
  font-size: 15px;
  font-weight: 400;
  border: none;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  color: #fff;
  background-color: #1abc9c;
  box-sizing: border-box;
  padding: 12px 24px;
  display: inline-block;
  position: relative;
  margin: 0 5px 15px 5px;
  transition: all 300ms ease-in-out;
}
#mc_embed_signup .button:hover {
  background-color: #17a98c;
  cursor: pointer;
}
#mc_embed_signup div#mce-responses {
  float: left;
  top: -1.4em;
  padding: 0em .5em 0em .5em;
  overflow: hidden;
  width: 90%;
  margin: 0 5%;
  clear: both;
}
#mc_embed_signup div.response {
  margin: 1em 0;
  padding: 1em .5em .5em 0;
  font-weight: bold;
  float: left;
  top: -1.5em;
  z-index: 1;
  width: 80%;
}
#mc_embed_signup #mce-error-response {
  display: none;
}
#mc_embed_signup #mce-success-response {
  color: #529214;
  display: none;
}
#mc_embed_signup label.error {
  display: block;
  float: none;
  width: auto;
  margin-left: 1.05em;
  text-align: left;
  padding: .5em 0;
}
@media (max-width: 768px) {
  #mc_embed_signup input.email {
    width: 100%;
    margin-bottom: 5px;
  }
  #mc_embed_signup .clear {
    display: block;
    width: 100%
  }
  #mc_embed_signup .button {
    width: 100%;
    margin: 0;
  }
}
.subscribe-header > h1 {
  color: #4d4d4d;
  font-size: 27px;
  font-weight: 700;
  margin: 0 0 27px 0;
}
.subscribe-subheader > p {
  color: #686868;
  font-size: 18px;
  margin: 18px 0;
}
.subscribe-fields {
  margin: 25px auto 0 auto;
  display: flex;
  flex-wrap: wrap;
}

.subscribe-field {
  flex: 100 1 auto;
}
.subscribe-guarantee > p {
  color: #4d4d4d;
  font-size: 13px;
  font-weight: 400;
  margin: 10px 0 15px 0;
}

